[project]
name = "langgraph-research-assistant-v2"
version = "0.0.0"
description = "LangGraph multi-agent research assistant"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
